# QPE

./: .gitignore  README.md  setup.cfg  setup.py
Examples/: Presentation.ipynb
QPE/: GrandFinale.py  HelpFunctions.py  Unitary.py
QPE.egg-info/: PKG-INFO  requires.txt
QPE/Circuits/: AQFT.py  SimpleCircuit.py
lib/QPE/: PhaseEstimator.py
lib/QPE/Circuits/: Iterative.py  SuperIterative.py
qpe.egg-info/: PKG-INFO
src/QPE/: Backend.py  GrandFinale.py  PhaseEstimator.py  Unitary.py
src/QPE.egg-info/: PKG-INFO  SOURCES.txt
src/QPE/Circuits/: Iterative.py  Kitaev.py  QFT.py  SimpleCircuit.py  SuperIterative.py
src/QPE/QPE.egg-info/: PKG-INFO
