[metadata]

name = QPE
version = 0.0.1.5
author = Hjalmar Lindstedt, Riccardo Conte, Miguel Carrera Belo
author_email = hjaleta@gmail.com
description = Qiskit applications for Quantum Phase Estimationn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hjaleta/QPE
project_urls = 
Bug Tracker = https://github.com/hjaleta/QPE/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
[options]
package_dir = 
    =QPE
packages = find:
python_requires = >=3.6
install_requires =
   numpy
   qiskit
   quantuminspire
